--- a/style.css
+++ b/style.css
@@ -145,3 +145,78 @@ img {
 {
     align-self: flex-end;
 }
+
+.fase17
+{
+    height: 97vh;
+    display: flex;
+    align-items: flex-start;
+}
+
+.camelo17
+{
+    order: 1;
+    align-self: flex-end;
+
+}
+
+.fase18
+{
+    display: flex;
+    height: 97vh;
+    flex-wrap: wrap;
+}
+
+.fase19
+{
+    height: 97vh;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+}
+
+
+.fase20
+{
+    height: 97vh;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+}
+
+.fase21
+{
+    display: flex;
+    flex-wrap: wrap;
+    align-content: flex-start;
+}
+
+.fase22
+{
+    display: flex;
+    height: 97vh;
+    flex-wrap: wrap;
+    align-content: flex-end;
+}
+
+.fase23
+{
+    display: flex;
+    height: 97vh;
+    flex-wrap: wrap;
+    flex-direction: column-reverse;
+    align-items: center;
+
+}
+
+.fase24
+{
+    display: flex;
+    height: 97vh;
+    flex-direction: column-reverse;
+    flex-wrap: wrap-reverse;
+    align-content: space-between;
+    justify-content: center;
+}
+
+/*19 20 23 24
