--- a/style.css
+++ b/style.css
@@ -219,3 +219,23 @@ img {
     justify-content: center;
 }
 
+body 
+{
+    background-color: #f0f0f0;
+    text-align: center;
+}
+
+.botao 
+{
+    background-color: #4CAF50; 
+    color: black;
+    border: none;
+    padding: 10px 35px;
+    border-radius: 15px;
+    cursor: pointer;
+}
+
+.botao:hover 
+{
+    background-color: #437d46;
+}
